tests/errors/cast_from_nil.orus
fn main() {
    let a: i32 = nil as i32
}

